<resources>
    <string name="app_name">AI</string>

    <!-- Common error -->
    <string name="error_network">抱歉,网络错误!</string>
    <string name="error_system">抱歉,系统错误!</string>
    <string name="fragment_data_nonexistent">数据不存在或未初始化!</string>

    <!-- LoginActivity -->
    <string name="title_activity_login">登录</string>
    <string name="prompt_uname">用户名 / 手机号 / 邮箱</string>
    <string name="prompt_upassword">密码</string>
    <string name="prompt_urememberme">记住我</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_name">用户名至少需要5个字符</string>
    <string name="error_invalid_password">密码至少需要6个字符</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_name_field_required">请输入用户名</string>
    <string name="error_password_field_required">请输入密码</string>
    <string name="error_user_nonexistent">抱歉,用户名或密码不存在!</string>
    <!-- LoadingActivity -->
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- UserInfoFragment -->
    <string name="fragment_userinfo_nickname">用户昵称</string>
    <string name="fragment_userinfo_mphone">手机号码</string>
    <string name="fragment_userinfo_email">电子邮箱</string>
    <string name="fragment_userinfo_oldpass">原用密码</string>
    <string name="fragment_userinfo_newpass">新设密码</string>
    <string name="fragment_userinfo_submit">修改</string>
    <string name="fragment_userinfo_reset">重置</string>
    <string name="fragment_userinfo_error_nickname_empty">请输入用户昵称!</string>
    <string name="fragment_userinfo_error_nickname_length">长度范围2至18!</string>
    <string name="fragment_userinfo_error_oldpass_empty">请输入新密码!</string>
    <string name="fragment_userinfo_error_oldpass_length">长度范围6至18!</string>
    <string name="fragment_userinfo_error_newpass_empty">请输入新密码!</string>
    <string name="fragment_userinfo_error_newpass_length">长度范围6至18!</string>
    <string name="fragment_userinfo_toast_submit_no">信息无需更新!</string>
    <string name="fragment_userinfo_toast_submit_ok">信息更新成功!</string>
    <!-- ExitDialogFragment -->
    <string name="fragment_exitdialog_name">fragment_exitdialog</string>
    <string name="fragment_exitdialog_title">确定退出系统!</string>
    <string name="fragment_exitdialog_ok">确定</string>
    <string name="fragment_exitdialog_cancel">取消</string>
    <!-- NavigationDrawerFragment -->
    <string name="fragment_navigationdrawer_face">人脸采集</string>
    <string name="fragment_navigationdrawer_stats">统计报表</string>
    <string name="fragment_navigationdrawer_user_info">我的信息</string>
    <string name="fragment_navigationdrawer_log_login">登录日志</string>
    <string name="fragment_navigationdrawer_log_operation">操作记录</string>
    <string name="fragment_navigationdrawer_exit">退出系统</string>
    <!-- MeActivity -->
    <string name="title_activity_me">我的信息</string>
    <!-- RegisterActivity -->
    <string name="register_activity_name">客户姓名</string>
    <string name="register_activity_mphone">手机号码</string>
    <string name="register_activity_idcard">身份证码</string>
    <string name="register_activity_sex">客户性别</string>
    <string name="register_activity_email">电子邮件</string>
    <string name="register_activity_nickname">客户昵称</string>
    <string name="register_activity_address">家庭住址</string>
    <string name="register_activity_remark">备注信息</string>
    <string name="register_activity_sex_male">男</string>
    <string name="register_activity_sex_female">女</string>
    <string name="register_activity_face_register">人脸注册</string>
    <string name="register_activity_error_name">客户姓名字符长度：2-20</string>
    <string name="register_activity_error_mphone">手机号码数字长度：11-13</string>
    <string name="register_activity_error_idcard">身份证码字符长度：18</string>
    <string name="register_activity_error_email">Email 格式不正确</string>
    <string name="register_activity_error_nickname">客户昵称字符长度：1-18</string>
    <string name="register_activity_error_address">家庭住址字符长度：2-50</string>
    <string name="register_activity_error_remark">备注信息字符长度：1-50</string>
    <string name="register_activity_success_register">人脸注册成功！</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>
