<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.com.ehomeguru.view.UserInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fragment_userinfo_linearlayout_padding"
            android:paddingRight="@dimen/fragment_userinfo_linearlayout_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:text="@string/fragment_userinfo_nickname"/>
            <EditText
                android:id="@+id/fragment_userinfo_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:singleLine="true"
                android:layout_weight="1"
                android:imeOptions="actionNext" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fragment_userinfo_linearlayout_padding"
            android:paddingRight="@dimen/fragment_userinfo_linearlayout_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:text="@string/fragment_userinfo_mphone"/>
            <EditText
                android:id="@+id/fragment_userinfo_mphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="phone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fragment_userinfo_linearlayout_padding"
            android:paddingRight="@dimen/fragment_userinfo_linearlayout_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:text="@string/fragment_userinfo_email"/>
            <EditText
                android:id="@+id/fragment_userinfo_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fragment_userinfo_linearlayout_padding"
            android:paddingRight="@dimen/fragment_userinfo_linearlayout_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:text="@string/fragment_userinfo_oldpass"/>
            <EditText
                android:id="@+id/fragment_userinfo_oldpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fragment_userinfo_linearlayout_padding"
            android:paddingRight="@dimen/fragment_userinfo_linearlayout_padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:text="@string/fragment_userinfo_newpass"/>
            <EditText
                android:id="@+id/fragment_userinfo_newpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="@dimen/fragment_userinfo_linearlayout_padding"
            android:paddingRight="@dimen/fragment_userinfo_linearlayout_padding">
            <Button
                android:id="@+id/fragment_userinfo_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:text="@string/fragment_userinfo_submit" />
            <Button
                android:id="@+id/fragment_userinfo_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_me_linearlayout_item_margin"
                android:text="@string/fragment_userinfo_reset" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>